--- a/event-object/dropdown/task.html
+++ b/event-object/dropdown/task.html
@@ -6,8 +6,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Выпадающие списки</title>
-    <link rel="stylesheet" href="task.css">    
-    <link rel="stylesheet" href="../../assets/css/style.css">    
+    <link rel="stylesheet" href="task.css">
+    <link rel="stylesheet" href="../../assets/css/style.css">
 </head>
 <body>
     <header class="header">
@@ -21,7 +21,7 @@
     <main class="content">
         <div class="card">
             <div class="dropdown">
-                <div class="dropdown__value">JavaScript</div>
+                <div class="dropdown__value" id="click__dropdown">JavaScript</div>
                 <ul class="dropdown__list">
                     <li class="dropdown__item">
                         <a href="" class="dropdown__link">
@@ -47,7 +47,7 @@
             </div>
         </div>
     </main>
-    
+
     <script src="task.js"></script>
 </body>
 </html>
