--- a/event-object/keysolo/task.html
+++ b/event-object/keysolo/task.html
@@ -28,6 +28,11 @@
                     <p>
                         Неправильно введённых слов: <span class="status__loss">0</span>
                     </p>
+                    <div class="timer">
+                        <p>
+                            Оставшееся время: <span class="timer__countdown">0</span> секунд
+                        </p>
+                    </div>
                 </div>
                 <div class="word">
                     <span class="symbol">К</span>
@@ -38,7 +43,7 @@
             </div>
         </div>
     </main>
-    
+
     <script src="task.js"></script>
 </body>
 </html>
